Material inspired forms: Fixed picker headline spacing

--- a/less/style/blocks/datepicker.less
+++ b/less/style/blocks/datepicker.less
@@ -128,7 +128,7 @@
 }
 
 .picker__headline {
-  margin: 8px 30px;
+  margin: 0px 30px;
 
   line-height: 31px;
   font-size: 1.1428em;
@@ -150,7 +150,7 @@
   display: block;
 
   width: 40px;
-  height: 50px;
+  height: auto;
 
   cursor: pointer;
 
@@ -172,18 +172,18 @@
 
 .picker__prev {
   float: left;
-  padding-top: 14px;
+  padding-top: 6px;
   text-align: right;
 }
 
 .picker__next {
   float: right;
-  padding-top: 14px;
+  padding-top: 6px;
   text-align: left;
 }
 
 .picker__content {
-  padding: 10px @picker-side-margin 18px @picker-side-margin;
+  padding: @picker-side-margin;
   background: @color-white;
   border: 1px @color-gray--predarkest solid;
   border-top: none;
